fixed style that breaks in firefox (#1002)

--- a/app/assets/stylesheets/shame_overrides.scss
+++ b/app/assets/stylesheets/shame_overrides.scss
@@ -61,7 +61,7 @@
 // Navigation Fix //
 
 .anchor {
-  display: inline-block;
+  display: inline-flex;
   height: $banner-height + $page-header-height + $error-banner-height;
   margin-top: 0 - ($banner-height + $page-header-height + $error-banner-height);
   visibility: hidden;
